<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.thoughtworks.todo_list.ui.task.CreateTaskActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/create_title_layout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/homeTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Toolbar
            android:id="@+id/create_task_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:navigationIcon="@drawable/ic_baseline_arrow_back_ios_24"
            android:theme="@style/AppTheme.ToolBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/create_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:buttonTint="@color/colorTextBlue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/create_task_toolbar" />

        <TextView
            android:id="@+id/create_date_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            android:text="@string/date"
            android:buttonTint="@color/colorTextBlue"
            app:layout_constraintBaseline_toBaselineOf="@id/create_check_box"
            app:layout_constraintEnd_toStartOf="@id/create_switch"
            app:layout_constraintStart_toEndOf="@id/create_check_box"/>
        <Switch
            android:id="@+id/create_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            android:text="@string/remind"
            android:theme="@style/MySwitch"
            android:textColor="@color/colorTextGray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@id/create_date_info"
            app:layout_constraintTop_toBottomOf="@id/create_task_toolbar" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        android:id="@+id/create_content"
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/create_title_layout">
    <EditText
        android:id="@+id/create_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textSize="26sp"
        android:background="@null"
        android:hint="@string/title"/>
    <EditText
        android:id="@+id/create_description"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="20sp"
        android:padding="20dp"
        android:textColor="@color/colorTextGray"
        android:gravity="top"
        android:background="@null"
        android:hint="@string/hint_description"
        />
    </LinearLayout>
    <Button
        android:id="@+id/delete_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:visibility="invisible"
        android:background="@drawable/delete_task"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/create_task_button"
        app:layout_constraintEnd_toEndOf="parent">
    </Button>
    <Button
        android:id="@+id/create_task_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:background="@drawable/create_success"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    </Button>
    <DatePicker
        android:id="@+id/date_picker_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:background="@drawable/calendar_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>