<resources>
    <string name="app_name">My Application</string>
    <string name="home_page_name">Home</string>
    <!-- Strings related to login -->
    <string name="prompt_username">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="login_welcome">Welcome !</string>
    <string name="invalid_username">用户名必须是3 ~ 12为字母或数字</string>
    <string name="invalid_password">密码长度必须是6 ~ 18位字符</string>
    <string name="login_failed_username">用户不存在</string>
    <string name="login_failed_password">密码错误</string>
    <string name="filter_username">0123456789zxcvbnmasdfghjklqwertyuiopZXCVBNMASDFGHJKLQWERTYUIOP</string>
    <string name="logout">登出</string>
    <string name="title">标题</string>
    <string name="create">+</string>
    <string name="logo">logo</string>
    <string name="remind">提醒</string>
    <string name="date">日期</string>
    <string name="hint_description">描述</string>
    <string name="success_logout">success logout!</string>
</resources>